# biomarker-assignment

./: .gitignore  README.md  analysis.ipynb  main.py  pyproject.toml
docs/: report.qmd
docs/presentation/: outline.md  slides-styles.css  slides.html  slides.qmd
output/results/: loadings_summary.csv  pc_target_correlations.csv  relevance_table.csv  zscore_params.csv
src/: constants.py  features.py  pipeline.py  plotting.py  selection.py  validation.py
