[project]
name = "biomarker-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
